package TEMA6.Practica1;

public abstract class MetodoPago {

    public abstract void procesarPago(double importe);

}
